[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pistony"
version = "0.1.0"
description = "A modern Python wrapper for Piston, Engineer Man's high performance general purpose code execution engine.."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "AalbatrossGuy"},]
keywords = ["piston", "code-execution", "emkc", "sandbox", "api", "wrapper", "engineer-man", "code-engine", "pistony"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]

dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.6.2",
  "types-requests",
  "pre-commit>=3.7",
]

# [project.scripts]
# pistony = "pistony.cli:main"

[tool.hatch.build]
packages = ["src/pistony"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E","F","I","B","UP","ANN","C4"]
ignore = ["ANN101","ANN102"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
ignore_missing_imports = true
namespace_packages = true
mypy_path = "src"

